changing instruction test

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <p class="instruction island" id="welcome_msg">Majority colouring is a part of graph theory that examines properties of vertices colouring. Vertex, let's call it v, is happy when it has at most half of its adjacent vertices coloured with the same colour as v. In this game, user aims to make all vertices of a given graph happy and thus make given graph majority coloured. The tough part is that your opponent, being computer, is going to prevent from happening. Have fun!</p>
+    <p class="instruction island" id="welcome_msg">Majority colouring is graph theory that examines properties of vertices colouring. Vertex, let's call it v, is happy when it has at most half of its adjacent vertices coloured with the same colour as v. In this game, user aims to make all vertices of a given graph happy and thus make given graph majority coloured. The tough part is that your opponent, being computer, is going to prevent from happening. Have fun!</p>
     <button class="button" id="start">PLAY</button>
     <div class="container island"></div>
 
