--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <p class="instruction island" id="welcome_msg">Majority colouring is graph theory that examines properties of vertices colouring. Vertex, let's call it v, is happy when it has at most half of its adjacent vertices coloured with the same colour as v. In this game, user aims to make all vertices of a given graph happy and thus make given graph majority coloured. The tough part is that your opponent, being computer, is going to prevent from happening. Have fun!</p>
+    <p class="instruction island" id="welcome_msg">Hello World! On this website you can play a puzzle game which is based on the graph theory. Rules are simple: you need to end up with a majority-coloured graph. This means that each vertex, let's call it <span style="font-style: oblique;">v</span>, coloured with colour <span style="font-style: oblique;">c(v)</span> must have <span style="font-weight: bold;">at most half</span> of its adjacent vertices coloured <span style="font-style: oblique;">c(v)</span>. You can change a vertex color into green by clicking on it. Keep in mind that your computer opponent will color one vertex into red after you move and it is going to prevent from majority colouring. Sounds challenging? Hit the play button and have fun!</p>
     <button class="button" id="start">PLAY</button>
     <div class="container island"></div>
 
